feat: include subchart dependencies for Flux GitRepository support
Flux GitRepository + HelmRelease doesn't run helm dependency update,
so subchart tarballs must be committed. Added Chart.lock and charts/*.tgz.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-charts/opencti/charts/
-charts/opencti/Chart.lock
+# Subchart tarballs included for Flux GitRepository compatibility
+# charts/opencti/charts/
+# charts/opencti/Chart.lock
