feat: add connectorTokenExistingSecret and envFromSecrets support
- connectorTokenExistingSecret: separate token for connectors vs admin
- envFromSecrets per connector: inject individual secrets as env vars
- Fix healthAccessKey to require explicit value with existingSecret
- Fix adminToken sentinel when using existingSecret

--- a/charts/opencti/templates/connector/deployment.yaml
+++ b/charts/opencti/templates/connector/deployment.yaml
@@ -58,6 +58,14 @@ spec:
             - name: {{ $key | upper }}
               value: {{ $value | quote }}
             {{- end }}
+            {{- /* Per-connector secret env injection */}}
+            {{- range $envName, $secretRef := ($connector.envFromSecrets | default dict) }}
+            - name: {{ $envName }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $secretRef.name }}
+                  key: {{ $secretRef.key }}
+            {{- end }}
           {{- with $connector.envFrom }}
           envFrom:
             {{- toYaml . | nindent 12 }}
