fix: remove personal info, bump rabbitmq, document Bitnami deprecation
- Remove flux/, values-dapper-cluster.yaml (cluster-specific, lives in dapper-cluster)
- Remove personal name from Chart.yaml maintainers
- Clean README: remove dapper-cluster references, add OCI install/Flux examples
- Document connectorTokenExistingSecret and envFromSecrets in README
- Bump rabbitmq subchart 16.0.13 → 16.0.14
- Add NOTE about Bitnami Docker Hub image deprecation (Aug 2025)
- Recommend bitnamilegacy/rabbitmq as fallback registry

--- a/charts/opencti/values.yaml
+++ b/charts/opencti/values.yaml
@@ -235,6 +235,13 @@ opensearch:
 # -- RabbitMQ subchart (Bitnami)
 rabbitmq:
   enabled: true
+  image:
+    registry: docker.io
+    repository: bitnami/rabbitmq
+    # NOTE: Bitnami removed images from docker.io in Aug 2025.
+    # If image pull fails, override to bitnamilegacy/rabbitmq or use
+    # the official rabbitmq image with appropriate config.
+    # tag: ""  # uses chart appVersion default
   auth:
     username: user
     # password: set via --set rabbitmq.auth.password=XXX
