--- a/charts/opencti/Chart.yaml
+++ b/charts/opencti/Chart.yaml
@@ -8,7 +8,7 @@ version: 0.1.0
 appVersion: 6.4.12
 home: https://github.com/dapperdivers/helm-opencti
 maintainers:
-  - name: Derek Mackley
+  - name: dapperdivers
     url: https://github.com/dapperdivers
 sources:
   - https://github.com/OpenCTI-Platform/opencti
@@ -24,7 +24,7 @@ dependencies:
     repository: https://opensearch-project.github.io/helm-charts/
     condition: opensearch.enabled
   - name: rabbitmq
-    version: 16.0.13
+    version: 16.0.14
     repository: oci://registry-1.docker.io/bitnamicharts
     condition: rabbitmq.enabled
   - name: minio
